maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  gauche()
  ^WallFollowerMaze:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  res = estFaceMur()
  ^WallFollowerMaze:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  droite()
  ^WallFollowerMaze:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return res 
  ^